tests/ui/macros/assert-mismatched-types-14091.stderr
error[E0308]: mismatched types
  --> $DIR/assert-mismatched-types-14091.rs:4:5
   |
LL |     assert!(1,1);
   |     ^^^^^^^^^^^^ expected `bool`, found integer

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
